...
                step='Passo 2'
                title='Finalizando dieta'
                testID="backButton"
            />
  
            <ScrollView style={styles.content}>
                <Text style={styles.label}>Sexo:</Text>
                <Select
                    control={control}
                    name="gender"
                    placeholder="Selecione seu sexo..."
                    error={errors.gender?.message}
                    options={genderOptions}
...
